inky/tests/snapshots/snapshots__snapshot_justify_space_between.snap
---
source: tests/snapshots.rs
assertion_line: 215
expression: "render_snapshot(&node, 45, 10)"
---
┌──────────────────────────────────────┐     
│┌──────┐                      ┌──────┐│     
││      │                      │      ││     
│└──────┘                      └──────┘│     
└──────────────────────────────────────┘
