inky/tests/snapshots/snapshots__snapshot_markdown_basic.snap
---
source: tests/snapshots.rs
expression: "render_snapshot(&node, 45, 10)"
---
┌──────────────────────────────────────┐     
│# Header                              │     
│                                      │     
│This is a bold and italic paragraph.  │     
│                                      │     
│                                      │     
│                                      │     
└──────────────────────────────────────┘
