inky/tests/snapshots/snapshots__snapshot_markdown_code_block.snap
---
source: tests/snapshots.rs
expression: "render_snapshot(&node, 45, 10)"
---
┌──────────────────────────────────────┐     
│┌─ rust                               │     
││ fn hello() {                        │     
││     println!("Hi!");                │     
││ }                                   │     
│                                      │     
│                                      │     
└──────────────────────────────────────┘
