inky/tests/snapshots/snapshots__snapshot_multiline_text.snap
---
source: tests/snapshots.rs
expression: "render_snapshot(&node, 25, 12)"
---
┌──────────────────┐     
│Line 1            │     
│Line 2            │     
│Line 3            │     
│                  │     
│                  │     
└──────────────────┘
