inky/tests/snapshots/snapshots__snapshot_nested_boxes.snap
---
source: tests/snapshots.rs
assertion_line: 182
expression: "render_snapshot(&outer, 25, 12)"
---
╔══════════════════╗     
║                  ║     
║ ╭────────╮       ║     
║ │        │       ║     
║ ╰────────╯       ║     
║                  ║     
╚══════════════════╝
