inky/tests/snapshots/snapshots__snapshot_nested_macros.snap
---
source: tests/snapshots.rs
expression: "render_snapshot(&node, 30, 12)"
---
╔═══════════════════════╗     
║Title                  ║     
║ABC                    ║     
║Footer                 ║     
║                       ║     
║                       ║     
║                       ║     
╚═══════════════════════╝
