inky/tests/snapshots/snapshots__snapshot_progress_bar_ascii.snap
---
source: tests/snapshots.rs
expression: "render_snapshot(&node, 45, 5)"
---
┌──────────────────────────────────────┐     
│[==========--------]                  │     
└──────────────────────────────────────┘
