inky/tests/snapshots/snapshots__snapshot_progress_bar_block.snap
---
source: tests/snapshots.rs
expression: "render_snapshot(&node, 45, 5)"
---
┌──────────────────────────────────────┐     
│███████████████░░░░░                  │     
└──────────────────────────────────────┘
