inky/tests/snapshots/snapshots__snapshot_sparkline_blocks.snap
---
source: tests/snapshots.rs
expression: "render_snapshot(&node, 25, 6)"
---
┌──────────────────┐     
│▂▅▁█▄▆▃▇          │     
│                  │     
└──────────────────┘
