inky/tests/snapshots/snapshots__snapshot_sparkline_braille.snap
---
source: tests/snapshots.rs
expression: "render_snapshot(&node, 25, 6)"
---
┌──────────────────┐     
│⠀⣤⣀⣿⣀⣶⣤⣶          │     
│                  │     
└──────────────────┘
