inky/tests/snapshots/snapshots__snapshot_status_bar.snap
---
source: tests/snapshots.rs
expression: "render_snapshot(&node, 45, 5)"
---
┌──────────────────────────────────────┐     
│⣾ Processing files...                 │     
└──────────────────────────────────────┘
