inky/tests/snapshots/snapshots__snapshot_text_in_box.snap
---
source: tests/snapshots.rs
assertion_line: 84
expression: "render_snapshot(&node, 25, 10)"
---
┌──────────────────┐     
│Hello, World!     │     
│                  │     
│                  │     
└──────────────────┘
